--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bit by Bit Music Store</title>
-    <link href="/assets/css/index.css" rel="stylesheet" />
+    <link href="./assets/css/index.css" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
@@ -18,47 +18,33 @@
         <main>
             <ul class="music-list">
                 <li>
-                    <div class="card">
-                        <img src="/assets/images/fally-ipupa.jpeg" class="card-img-top" alt="music-album">
+                    <div class="card" style="width: 18rem;">
+                        <img src="./assets/images/fally-ipupa.jpeg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Roi Manitou</h5>
-                            <p class="card-text">Fally Ipupa</p>
-                            <audio controls>
-                                <source src="/assets/music/Fally Ipupa - Roi Manitou (Clip Officiel).mp3"
-                                    type="audio/mpeg" />
-                            </audio>
-                            <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the card's content.Fally Ipupa</p>
+                                <audio controls src="./assets/music/Fally Ipupa - Roi Manitou (Clip Officiel).mp3"></audio>
                         </div>
                     </div>
                 </li>
-                <li>
-                    <div class="card">
-                        <img src="/assets/images/skol.jpg" class="card-img-top" alt="music-album">
-                        <div class="card-body">
-                            <h5 class="card-title">Skol mandra manda</h5>
-                            <p class="card-text">Koffi Olomide</p>
-                            <audio controls>
-                                <source src="/assets/music/Koffi Olomidé - Skol Mandra Manda (Clip Officiel).mp3"
-                                    type="audio/mpeg" />
-                            </audio>
-                            <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
-                        </div>
+                <li><div class="card" style="width: 18rem;">
+                    <img src="./assets/images/skol.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Skol mandra manda</h5>
+                        <p class="card-text">Koffi Olomide</p>
+                            <audio controls src="./assets/music/Koffi Olomidé - Skol Mandra Manda (Clip Officiel).mp3"></audio>
                     </div>
-                </li>
-                <li>
-                    <div class="card">
-                        <img src="/assets/images/snappy.jpg" class="card-img-top" alt="music-album">
-                        <div class="card-body">
-                            <h5 class="card-title">All Night</h5>
-                            <p class="card-text">Snappy G ft Trivia</p>
-                            <audio controls>
-                                <source src="/assets/music/Koffi Olomidé - Skol Mandra Manda (Clip Officiel).mp3"
-                                    type="audio/mpeg" />
-                            </audio>
-                            <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
-                        </div>
+                </div></li>
+                <li><div class="card" style="width: 18rem;">
+                    <img src="./assets/images/snappy.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">All Night</h5>
+                        <p class="card-text">Snappy G ft Trivia/p>
+                            <audio controls src="./assets/music/Snappy ft Trivia -ALL NIGHT(officail video).mp3"></audio>
                     </div>
-                </li>
+                </div></li>
+                
             </ul>
         </main>
         <footer class="footer">
